The documentation is compiled correctly now. I had to become a Sphinx/docutils developer in order to fix what seems a trivial problem. The problem is that the singlehtml target does modify the doctree, rather than parsing it as any other builder. This modification (function inline_all_toctrees called from builders/html.py) removes all the toctrees nodes making it impossible to show the global index. In order to solve that, I had to provide by own extension (in extensions/nmag.py) which adds a new RST directive
.. globalindex::

This does insert the toctree explicitly.
Now the docs look fine. Also the PDF and the split-html modes seeem to work.

--- a/nmag/README
+++ b/nmag/README
@@ -6,3 +6,8 @@ And the following other packages (useful for generating the formulas):
 
 texlive-latex-extra
 dvipng
+
+For generating the PDF you may need (this is for Ubuntu):
+
+texlive-fonts-recommended
+
