--- a/nmag/README
+++ b/nmag/README
@@ -14,6 +14,6 @@ texlive-fonts-recommended
 
 On Ubuntu 11.10, the packages are
 
-python-sphinx dvipng texlive-latex-extra
+python-sphinx dvipng texlive-latex-extra texlive-fonts-recommended
 
 
