--- a/nmag/faq.txt
+++ b/nmag/faq.txt
@@ -124,7 +124,8 @@ Laplace operator matrix). Conceptually, it is easy to add support for
 this but due to limited manpower, it has not happened yet.
 
 In short: once the setup stage is over, nmag is about as fast as
-magpar. Magpar's setup time, however, is much smaller.
+magpar. Magpar's setup time, however, is much smaller. 
+Magpar is also more efficient in memory usage.
 
 .. _How do I start a time-consuming nmag run in the background?:
 
@@ -196,15 +197,13 @@ Yes. See :ref:`Example: Parallel execution (MPI) <example parallel execution (MP
 How should I cite nmag?
 -----------------------
 
-For the time being, please cite: 
+Please cite: 
 
 * Thomas Fischbacher, Matteo Franchin, Giuliano Bordignon, and Hans
   Fangohr.  *A Systematic Approach to Multiphysics Extensions of
   Finite-Element-Based Micromagnetic Simulations: Nmag*, in IEEE
   Transactions on Magnetics, **43**, 6, 2896-2898 (2007). (Available `online <http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4202717>`__)
   
-A more substantial publication is in preparation.
-
 .. _Why can you not use the step as a unique identifier?:
 
 Why can you not use the step as a unique identifier?
@@ -253,3 +252,122 @@ Data and log files will all start with the simulation name, followed
 by some specific appended string and specific file extensions. It is
 thus safe to run simulations with different names in the same
 directory.
+
+
+
+Can I save data to an arbitrary directory?
+------------------------------------------
+
+Do you really need to do so?
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+First, consider whether you really need to save data in a different
+directory. Remember that you can run many simulation with one single
+script just using a different simulation name, like::
+
+  ...
+  s1 = Simulation('one')
+  ...
+  s2 = Simulation('two')
+  ...
+
+
+When you save the data for simulation ``one`` you get files like
+``one_dat.h5`` and ``one_dat.ndt``, while when dealing with simulation ``two`` you get ``two_dat.h5`` and ``two_dat.nd5``. There is no interference
+between the two simulations (and in particular it is necessary to save thedata in different directories.)
+
+How to save data to a different directory
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+When you run a simulation script which saves data from a simulation,
+the files are saved by default in the current working directory.  In
+order to change this and save data into a directory called ``./mydir/``
+you should start your script in the following way::
+
+
+  import nmag
+  import nsim.features
+  fts = nsim.features.Features()
+  fts.set('etc', 'savedir', './mydir/')
+  ...
+  ...
+
+
+Alternatively, you can change the current working directory at the
+beginning of the file with ordinary Python code::
+
+  
+  import os
+  initial_dir = os.path.abspath(os.path.curdir)
+  os.chdir('./mydir')
+  ...
+  ...
+  os.chdir(initial_dir)
+
+If the directory you want to write to does not exist then (in both the
+two example) you may have to create it first, with something like:
+
+  the_dir = './mydir'
+  import os
+  if not os.path.exists(the_dir):
+    os.mkdir(the_dir)
+
+
+
+How to check the convergence of a simulation
+--------------------------------------------
+
+
+How long it takes to run a simulation? This depends very much on what
+you are simulating and under what conditions (applied field, current,
+etc). Sometimes, however, your simulation may not be ending as quickly as
+you expected and you may want to check what is happening. It may be,
+indeed, that the simulation is not converging, which means that it may
+actually never end. One thing you can do in such a case is to take a
+look at the file ``*_progress.txt``, where ``*`` stands for the simulation
+name (given to the ``Simulation`` class when creating the simulation
+oject). For example, if you created your simulation object with a line
+such as::
+
+  s = nmag.Simulation('one')
+
+Then you may be looking for a file with name ``one_progress.txt``. If
+you used simply ``s = nmag.Simulation()`` and your file is named
+``two.py`` then you should look for a file with name
+``two_progress.txt``. This file contains statistics about the time
+integrator. You'll first get the current time, step number, etc. Then
+you'll get a list of rows each containing four columns, such as::
+
+  123 0.456 0.123 None
+
+Column 1 is the step reached, an integer number which always
+increases. The file shows convergence statistics for the last few
+steps (it doesn't contain statistics for all the steps, since this
+would make it quickly very big). Column 2 contains the current value
+of max || dM/dt ||. Column 3 contains the stopping value of
+dM/dt. Convergence is reached when column 2 < column 3 for at least
+two times. If the simulations is going well, then you should see that
+column 2 contains numbers which are not oscillating rapidly and are
+rather decreasing or increasing "smoothly". This is what typically
+should happen, even if it can be that your simulation has really a
+bizarre dynamics which really oscillates in a frenetic way, so one
+should be careful when analysing the data. The fourth column contains
+an evaluation of the quality of the convergence according to what we
+just said. This number should be close to one when the convergence is
+smooth and close to zero when it is oscillating dramatically.
+
+What to do in case of convergence problems
+------------------------------------------
+
+If your simulation has really a convergence problem, you can do two
+things: 
+
+* improve the tolerances ``ts_abs_err`` and ``ts_rel_err``
+  (decrease these numbers) by using the method ``set_params`` of the
+  ``Simulation`` object; 
+
+* use a ``do=[('next_stage', at('stage_time',SI(x, 's')))]`` as an 
+  argument to the ``hysteresis`` method. This way
+  you impose a maximum time ``x`` to spend in the computation of a stage
+  (you should make sure this makes sense in your case).
+ 
